--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -189,3 +189,12 @@ aside {
 .multiselect--active {
   z-index: 1000 !important;
 }
+
+.link {
+  color: #409EFF;
+}
+.link:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #409EFF;
+}
